test/error/MethodParamDefaultNonConst.ci
public static class Test
{
	public static void Run(int[]# arr = new int[10]) //ERROR: Default argument value not constant
	{
	}
}
